--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @layer base {
     h1,
@@ -20,4 +21,41 @@
 
 html {
     scroll-behavior: smooth;
+}
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+progress {
+    border-radius: 7px;
+    width: 100%;
+    height: 17px;
+}
+progress::-webkit-progress-bar {
+    background-color: #e8e8e8;
+    border-radius: 65px;
+}
+.dark progress::-webkit-progress-bar {
+    background-color: #676767;
+}
+progress::-webkit-progress-value {
+    background-color: #2b2b2b;
+    border-radius: 65px;
+}
+.dark progress::-webkit-progress-value {
+    background-color: #eaeaea;
 }
