--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,21 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
 @layer base {
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        font-family: "Raleway", sans-serif;
-        font-weight: 700;
+    section {
+        @apply py-20
     }
-    body {
-        font-family: "Roboto", sans-serif;
+    section:first-of-type {
+        @apply pb-20 pt-40
+    }
+    section:last-of-type {
+        @apply pt-20 pb-40
+    }
+
+    p {
+        @apply dark:text-neutral-400
+    }
+
+    .title {
+        @apply text-4xl lg:text-5xl font-bold dark:text-neutral-100
+    }
+
+    .title-2 {
+        @apply text-2xl lg:text-3xl dark:text-neutral-100
+    }
+
+    .subtitle {
+        @apply text-lg text-black/95 dark:text-neutral-100
     }
 }
 
