--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer utilities {
+  .bg-default {
+    @apply bg-neutral-50 dark:bg-neutral-900
+  }
+
+  .text-default {
+    @apply text-neutral-900 dark:text-neutral-50
+  }
+
+  .title, .title-1 {
+    @apply relative font-serif text-5xl md:text-6xl;
+  }
+
+  .title-2 {
+    @apply relative font-serif text-3xl;
+  }
+
+  .subtitle, .subtitle-1 {
+    @apply text-brand font-semibold uppercase text-xs;
+  }
+
+  .subtitle-2 {
+    @apply text-brand font-serif capitalize text-sm
+  }
+
+  .link, .link-1 {
+    @apply text-xs uppercase font-serif
+  }
+
+  .border-default {
+    @apply border-neutral-200 dark:border-neutral-800
+  }
+
+  .rounded-default {
+    @apply rounded
+  }
+}
+
+
 @layer base {
   @font-face {
     font-family: Qanelas;
@@ -39,11 +79,12 @@
     src: url(../assets/fonts/SpaceGrotesk-Bold.woff2) format('woff2');
   }
 
-  body {
+  html {
+    scroll-behavior: smooth;
   }
 
-  p {
-    @apply text-black/50 dark:text-white/50 tracking-wide;
+  body {
+    @apply bg-default text-default
   }
 
   section {
@@ -57,59 +98,7 @@
   }
 
   p {
-    @apply dark:text-neutral-400;
+    @apply text-neutral-900/50 dark:text-neutral-50/50 tracking-wide
   }
 
-  .title {
-    @apply text-4xl lg:text-5xl font-bold dark:text-neutral-100;
-  }
-
-  .title-2 {
-    @apply text-2xl lg:text-3xl dark:text-neutral-100;
-  }
-
-  .subtitle {
-    @apply text-brand font-bold uppercase text-xs;
-  }
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.embed-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  max-width: 100%;
-}
-.embed-container iframe,
-.embed-container object,
-.embed-container embed {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-progress {
-  border-radius: 7px;
-  width: 100%;
-  height: 17px;
-}
-progress::-webkit-progress-bar {
-  background-color: #e8e8e8;
-  border-radius: 65px;
-}
-.dark progress::-webkit-progress-bar {
-  background-color: #676767;
-}
-progress::-webkit-progress-value {
-  background-color: #2b2b2b;
-  border-radius: 65px;
-}
-.dark progress::-webkit-progress-value {
-  background-color: #eaeaea;
 }
