Update dark colors

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,16 +26,16 @@
   }
 
   p {
-    @apply text-gray-900/70 dark:text-neutral-50/70 tracking-wide
+    @apply text-neutral-900/70 dark:text-neutral-50/70 tracking-wide
   }
 }
 @layer utilities {
   .bg-default {
-    @apply bg-neutral-50 dark:bg-gray-900
+    @apply bg-neutral-50 dark:bg-neutral-900
   }
 
   .text-default {
-    @apply text-gray-900 dark:text-neutral-50
+    @apply text-neutral-900 dark:text-neutral-50
   }
 
   .title, .title-1 {
