--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 @layer base {
-  html {
-    scroll-behavior: smooth;
+  html,
+  body {
+    overscroll-behavior: none;
   }
 
   body {
