--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,7 +44,11 @@
 
 
   .link, .link-1 {
-    @apply text-xs uppercase
+    @apply relative leading-loose inline-flex opacity-90 hover:opacity-100 after:block after:absolute after:bottom-px after:left-0 after:w-0 after:h-px after:bg-yellow hover:after:w-full duration-300 after:duration-300 transition
+  }
+
+  .link-2 {
+    @apply relative leading-loose inline-flex text-yellow/90 hover:text-white duration-300 transition
   }
 
   .border-default {
