--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,98 +4,182 @@
 
 @layer base {
 
-  body {
-    @apply bg-neutral-100 text-neutral-900 dark:bg-black dark:text-neutral-50
-  }
+    body {
+        @apply bg-neutral-100 text-neutral-900 dark:bg-black dark:text-neutral-50
+    }
 
-  button{
-    @apply focus:ring-0 focus:outline-0
-  }
+    button {
+        @apply focus:ring-0 focus:outline-0
+    }
 
-  p {
-    @apply leading-relaxed
-  }
+    p {
+        @apply leading-relaxed
+    }
 
-  section {
-    @apply py-40;
-  }
+    section {
+        @apply py-40;
+    }
 
-  ::-moz-selection {
-    @apply bg-neutral-900/10 dark:bg-neutral-50/10 text-yellow-900 dark:text-yellow
-  }
+    ::-moz-selection {
+        @apply bg-neutral-900/10 dark:bg-neutral-50/10 text-yellow-900 dark:text-yellow
+    }
 
-  ::selection {
-    @apply bg-neutral-900/10 dark:bg-neutral-50/10 text-yellow-900 dark:text-yellow
-  }
+    ::selection {
+        @apply bg-neutral-900/10 dark:bg-neutral-50/10 text-yellow-900 dark:text-yellow
+    }
 
+    @font-face {
+        font-family: Manrope;
+        font-weight: 300;
+        src: url(../assets/fonts/Manrope/Manrope-Light.woff2) format('woff2');
+    }
 
+    @font-face {
+        font-family: Manrope;
+        font-weight: 400;
+        src: url(../assets/fonts/Manrope/Manrope-Regular.woff2) format('woff2');
+    }
+
+    @font-face {
+        font-family: Manrope;
+        font-weight: 600;
+        src: url(../assets/fonts/Manrope/Manrope-SemiBold.woff2) format('woff2');
+    }
+
+    @font-face {
+        font-family: Manrope;
+        font-weight: 800;
+        src: url(../assets/fonts/Manrope/Manrope-Bold.woff2) format('woff2');
+    }
 }
+
+/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
+html.has-scroll-smooth {
+    overflow: hidden;
+}
+
+html.has-scroll-dragging {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.has-scroll-smooth body {
+    overflow: hidden;
+}
+
+.has-scroll-smooth [data-scroll-container] {
+    min-height: 100vh;
+}
+
+[data-scroll-direction="horizontal"] [data-scroll-container] {
+    height: 100vh;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+[data-scroll-direction="horizontal"] [data-scroll-section] {
+    display: inline-block;
+    vertical-align: top;
+    white-space: nowrap;
+    height: 100%;
+}
+
+.c-scrollbar {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 11px;
+    height: 100%;
+    transform-origin: center right;
+    transition: transform 0.3s, opacity 0.3s;
+    opacity: 0;
+}
+
+.c-scrollbar:hover {
+    transform: scaleX(1.45);
+}
+
+.c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
+    opacity: 1;
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar {
+    width: 100%;
+    height: 10px;
+    top: auto;
+    bottom: 0;
+    transform: scaleY(1);
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar:hover {
+    transform: scaleY(1.3);
+}
+
+.c-scrollbar_thumb {
+    @apply bg-neutral-400 dark:bg-neutral-600;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0.5;
+    width: 7px;
+    border-radius: 0;
+    margin: 2px;
+    cursor: -webkit-grab;
+    cursor: grab;
+}
+
+.has-scroll-dragging .c-scrollbar_thumb {
+    cursor: -webkit-grabbing;
+    cursor: grabbing;
+}
+
+[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
+    right: auto;
+    bottom: 0;
+}
+
+
 @layer utilities {
-  .text-title, .text-title-1 {
-    @apply relative text-4xl lg:text-6xl leading-normal lg:leading-tight;
-  }
+    .text-title, .text-title-1 {
+        @apply relative text-4xl lg:text-6xl leading-normal lg:leading-tight;
+    }
 
-  .text-title-2 {
-    @apply relative text-5xl lg:text-7xl leading-normal lg:leading-tight;
-  }
+    .text-title-2 {
+        @apply relative text-5xl lg:text-7xl leading-normal lg:leading-tight;
+    }
 
-  .text-title-3{
-    @apply relative text-2xl lg:text-3xl leading-normal lg:leading-tight;
-  }
+    .text-title-3 {
+        @apply relative text-2xl lg:text-3xl leading-normal lg:leading-tight;
+    }
 
-  .text-description, .text-description-1 {
-    @apply text-base lg:text-lg leading-loose lg:leading-loose
-  }
+    .text-description, .text-description-1 {
+        @apply text-base lg:text-lg leading-loose lg:leading-loose
+    }
 
-  .text-description-2 {
-    @apply text-sm leading-loose lg:leading-loose
-  }
-
-
-  .link, .link-1 {
-    @apply relative leading-loose inline-flex opacity-90 hover:opacity-100 after:block after:absolute after:bottom-px after:left-0 after:w-0 after:h-px after:bg-yellow-900 dark:after:bg-yellow hover:after:w-full duration-300 after:duration-300 transition
-  }
-
-  .link-2 {
-    @apply relative leading-loose inline-flex text-yellow-900/90 dark:text-yellow/90 hover:text-neutral-900 dark:hover:text-neutral-50 duration-300 transition
-  }
-
-  .border-default {
-    @apply border-neutral-200 dark:border-neutral-800
-  }
-
-  .rounded-default {
-    @apply rounded
-  }
-
-  .container-default {
-    @apply container w-full mx-auto px-8 lg:px-16
-  }
-}
+    .text-description-2 {
+        @apply text-sm leading-loose lg:leading-loose
+    }
 
 
-@layer base {
-  @font-face {
-    font-family: Area;
-    font-weight: 300;
-    src: url(../assets/fonts/Area/AreaNormalTrial-Light.otf) format('opentype');
-  }
+    .link, .link-1 {
+        @apply relative leading-loose inline-flex opacity-90 hover:opacity-100 after:block after:absolute after:bottom-px after:left-0 after:w-0 after:h-px after:bg-yellow-900 dark:after:bg-yellow hover:after:w-full duration-300 after:duration-300 transition
+    }
 
-  @font-face {
-    font-family: Area;
-    font-weight: 400;
-    src: url(../assets/fonts/Area/AreaNormalTrial-Regular.otf) format('opentype');
-  }
+    .link-2 {
+        @apply relative leading-loose inline-flex text-yellow-900/90 dark:text-yellow/90 hover:text-neutral-900 dark:hover:text-neutral-50 duration-300 transition
+    }
 
-  @font-face {
-    font-family: Area;
-    font-weight: 600;
-    src: url(../assets/fonts/Area/AreaNormalTrial-Semibold.otf) format('opentype');
-  }
+    .border-default {
+        @apply border-neutral-200 dark:border-neutral-800
+    }
 
-  @font-face {
-    font-family: Area;
-    font-weight: 800;
-    src: url(../assets/fonts/Area/AreaNormalTrial-Bold.otf) format('opentype');
-  }
+    .rounded-default {
+        @apply rounded
+    }
+
+    .container-default {
+        @apply container w-full mx-auto px-8 lg:px-16
+    }
 }
